--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.8.1
+dj-database-url==3.0.1
 Django==4.2.20
 gunicorn==20.1.0
+psycopg2-binary==2.9.10
 setuptools==80.9.0
 sqlparse==0.5.3
+whitenoise==6.9.0
